# lobsters

./: .gitignore  Cargo.toml  README.md  build-all-platforms  tar-binaries
.builds/: debian.yml  freebsd.yml
lobsters/: Cargo.toml
lobsters-cli/: Cargo.toml  README.md
lobsters-cli/src/: app.rs  error.rs  lib.rs  main.rs  render.rs  text.rs  theme.rs  util.rs
lobsters/src/: client.rs  error.rs  lib.rs  main.rs  models.rs
lobsters/src/client/: http_client.rs
scripts/: build-all-platforms  build-and-tar-host  build-freebsd  tar-binaries
src/: client.rs  error.rs  lib.rs  main.rs  models.rs
