[package]
name = "lobsters"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
cookie = { version = "0.11.0", default-features = false, features = ["percent-encode"] }
futures = "0.1"
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "<= 1.0"
url = "1.7"
