[package]
name = "lobsters-cli"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
chrono = "0.4"
chrono-humanize = "0.0.11"
easycurses = "0.12"
lobsters = { path = "../lobsters" }
futures = "0.1"
structopt = "0.2"
tokio = "<= 1.0"

[[bin]]
name = "lobsters"
path = "src/main.rs"
