[package]
name = "lobsters-cli"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
chrono = "0.4"
chrono-humanize = "0.0.11"
lobsters = { path = "../lobsters" }
futures = "0.1"
opener = "0.3"
structopt = "0.2"
termion = "1.5"
tokio = "<= 1.0"
wcwidth = "1.0"

[[bin]]
name = "lobsters"
path = "src/main.rs"
