[package]
name = "lobsters-cli"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
chrono-humanize = "0.0.11"
lobsters = { path = "../lobsters" }
futures = "0.1.25"
env_logger = "0.6.1"
opener = "0.3.2"
structopt = "0.2.15"
termion = "1.5.2"
tokio = "0.1.17"
wcwidth = "1.0.1"

[[bin]]
name = "lobsters"
path = "src/main.rs"
