[package]
name = "lobsters"
version = "0.1.0"
description = "Asynchronous http client for the lobste.rs website"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

documentation = "https://docs.rs/lobsters"
repository = "https://git.sr.ht/~wezm/lobsters"

readme = "README.md"
keywords = ["async", "lobsters", "client"]
categories = ["web-programming::http-client"]

license = "MIT OR Apache-2.0"

#[badges]
#sourcehut = { repository = "wezm/lobsters" }

[dependencies]
cookie_store = "0.5"
directories = "1.0"
futures = "0.1"
kuchiki = "0.7"
log = "0.4"
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "<= 1.0"
url = "1.7"
